--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/lodash": "^4.14.200",
     "argon2": "^0.31.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
