--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
+        "test": "jest --config ./jest-unit.json",
         "test:watch": "jest --verbose --watch --config ./jest-unit.json",
         "test:cov": "jest --coverage --config ./jest-unit.json",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
